# AndroidUSBCamera

./: .gitignore  .gitmodules  AndroidUSBCamera.code-workspace  COMPARE_JPEG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  workflow_build.py
libausbc/: CMakeLists.txt  build.gradle.kts
libausbc/src/main/java/com/jiangdg/: YUVUtils.kt
libausbc/src/main/java/com/jiangdg/ausbc/: MultiCameraClient.kt
libausbc/src/main/java/com/jiangdg/uac/: UACAudio.java  UACAudioHandler.java
libausbc/src/main/java/com/jiangdg/usb/: USBMonitor.java  USBVendorId.kt  UsbControlBlock.java  UsbDeviceInfo.kt
libausbc/src/main/java/com/jiangdg/utils/: BuildCheck.java  HandlerThreadHandler.java
libausbc/src/main/java/com/jiangdg/uvc/: Constants.kt  DrawSourceToSurface.kt  IUvcCamera.kt  PixelFormat.kt  Source.kt  SourceResolution.kt  TestSource.kt  UVCCamera.java  UVCCamera2.kt  UvcFrameFormat.kt
libausbc/src/main/java/com/vsh/font/: FontSrc.kt  FontSrcImpl.kt
libausbc/src/main/java/com/vsh/source/: BytePixelBufferFrame.kt  Consumer.kt  CountConsumer.kt  Frame.kt  FrameFormat.kt  JniCallbackConsumer.kt  JniConsumer.kt  JniObjectError.kt  JniSource.kt  JniSourceError.kt  ProducingConfiguration.kt  PullSource.kt  PullToPushSource.kt  PushSource.kt  Source.kt  SurfaceConsumer.kt  TestSource.kt  TestSourceYUV420.kt  UVCCamera2.kt
libausbc/src/main/java/com/vsh/uvc/: CheckRequirements.kt  JpegBenchmark.kt  (+5 more)
libausbc/src/main/jni/UVCCamera/: CMakeLists.txt  DI.h  ImageUseCases.cpp  ImageUseCases.h  JniJpegBenchmark.cpp  JniJpegBenchmark.h  JniUVCCamera.cpp  JpegBenchmark.cpp  JpegBenchmark.h  JpegUseCases.cpp  ProgressObserver.cpp  ProgressObserver.h  UVCCamera.h  UVCCameraAdjustments.cpp  UVCPreviewBase.cpp  UVCPreviewBase.h  UVCPreviewJni.cpp  UVCPreviewJni.h  _onload.cpp  _onload.h
libausbc/src/main/jni/UVCCamera/include/: Camera.h  JniMappers.h  JpegUseCases.h  LibUvcHacks.h  LoadJpegImageFromAssetsUseCase.h  UVCCamera.h  UVCCamera2.h  UVCCameraAdjustments.h  UVCCameraJniImpl.h  UVCCaptureBase.h  UVCConstants.h  UVCPreviewBase.h  UVCPreviewJni.h  _onload.h
libausbc/src/main/jni/UVCCamera/src/: ImageUseCases.cpp  JniJpegBenchmark.cpp  JniMapper.cpp  JniTestSource.cpp  JniUVCCamera.cpp  JniUVCCamera2.cpp  JpegUseCases.cpp  LibUvcHacks.cpp  LoadJpegImageFromAssetsUseCase.cpp  UVCCamera.cpp  UVCCamera2.cpp  UVCCameraJniImpl.cpp  UVCCaptureBase.cpp  UVCPreviewBase.cpp  UVCPreviewJni.cpp  _onload.cpp
libausbc/src/main/jni/common/: CMakeLists.txt
libausbc/src/main/jni/common/include/: localdefines.h  utilbase.h  utilbase_android.h  utilbase_cpp.h  utilbase_jni.h
libausbc/src/main/jni/common/src/: utilbase_cpp.cpp  utilbase_jni.cpp
libausbc/src/main/jni/hacks/: uvchacks.cpp
libausbc/src/main/jni/libjpeg-turbo-1.5.0/android/: CMakeLists.txt
libausbc/src/main/jni/libjpeg-turbo-2.1.1/: CMakeLists.txt  jdatasrc.c
libausbc/src/main/jni/libjpeg-turbo-2.1.1/android/: CMakeLists.txt
libausbc/src/main/jni/libjpeg-turbo-3.1.1-static/: CMakeLists.txt
libausbc/src/main/jni/libjpeg-turbo-3.1.1-static/arm64-v8a/: jconfigint.h
libausbc/src/main/jni/libjpeg-turbo-3.1.1-static/armeabi-v7a/: jconfigint.h
libausbc/src/main/jni/libjpeg-turbo-3.1.1-static/x86/: jconfigint.h
libausbc/src/main/jni/libjpeg-turbo-3.1.1-static/x86_64/: jconfigint.h
libausbc/src/main/jni/libusb/libusb/: core.c  io.c
libausbc/src/main/jni/modules/audiosources/: CMakeLists.txt
libausbc/src/main/jni/modules/decoders/: CMakeLists.txt
libausbc/src/main/jni/modules/encoders/: CMakeLists.txt
libausbc/src/main/jni/modules/font/: CMakeLists.txt
libausbc/src/main/jni/modules/images/: CMakeLists.txt
libausbc/src/main/jni/modules/libusb/: CMakeLists.txt
libausbc/src/main/jni/modules/libuvc/: CMakeLists.txt
libausbc/src/main/jni/modules/sources/: CMakeLists.txt
libausbc/src/main/jni/yuvutils/: nativelib.cpp  proxy_yuv.h
libausbc/src/main/res/values/: colors.xml  dimens.xml
libausbc/src/main/res/values-ja/: strings.xml
libausbc/src/test/java/com/vsh/: LoadJniLibrary.kt
libnative/src/main/cpp/: CMakeLists.txt  nativelib.cpp
libuvc/: CMakeLists.txt  build.gradle.kts
libuvc/cgen/: enums.kts  project.json
libuvc/src/main/jni/: Application.mk
libuvc/src/main/jni/UVCCamera/: Android.mk  CMakeLists.txt  JniUVCCamera.cpp  Parameters.cpp  UVCCamera.cpp  UVCCamera.h  UVCCameraAdjustments.cpp  UVCCameraAdjustments.h  UVCPreviewBase.cpp  UVCPreviewBase.h  UVCPreviewJni.cpp  UVCPreviewJni.h  UvcAdjustements.h  serenegiant_usb_UVCCamera.cpp  serenegiant_usb_UVCCamera.h
libuvc/src/main/jni/common/: localdefines.h
libuvc/src/main/jni/hacks/: CMakeLists.txt  uvchacks.cpp  uvchacks.h
libuvc/src/main/jni/libjpeg-turbo-1.5.0/: jdatasrc.c
libuvc/src/main/jni/libjpeg-turbo-1.5.0/android/: CMakeLists.txt
libuvc/src/main/jni/libjpeg-turbo-2.1.1/android/: CMakeLists.txt
libuvc/src/main/jni/libusb/libusb/: io.c
libuvc/src/main/jni/libuvc/src/: device.c  frame-mjpeg.c  stream.c
libuvc/src/main/jni/yuvutils/: CMakeLists.txt
linux/: CMakeLists.txt  SdlTools.cpp  SdlTools.h  Source.cpp  Source.h  TestSource.cpp  TestSource.h  UvcCamera.cpp  UvcCamera.h  jpegdecodebenchmark.cpp  uvccapture.cpp  workflow_build.py
linux/apps/gtk_preview/: CMakeLists.txt  gtk_preview.cpp
linux/apps/jpegbenchmark/: CMakeLists.txt  jpegdecodebenchmark.cpp
linux/apps/sdl_preview/: CMakeLists.txt  uvccapture.cpp
linux/apps/uvccapture/: CMakeLists.txt
linux/apps/x264test/: CMakeLists.txt
linux/apps/x264test/src/: main.cpp
linux/include/: UacSource.h
linux/libs/jnilib/: CMakeLists.txt
linux/libs/jnilib/src/: main.cpp
linux/modules/font/: CMakeLists.txt
linux/modules/sdl/: CMakeLists.txt
linux/modules/sdl/src/: SdlTools.cpp
linux/modules/sources/: CMakeLists.txt
linux/modules/sources/include/: Source.h  TestSource.h  TestSourceYUV420.h  UvcCamera.h
linux/modules/sources/src/: TestSource.cpp  TestSourceYUV420.cpp  UvcCamera.cpp
linux/src/: UacSource.cpp  UvcCamera.cpp  uaccapture.cpp  unix_socket_client.cpp  unix_socket_server.cpp  uvccapture.cpp
linux/test/: test_catch2.cpp
(+150 files in other folders)
